# gRPC Services Configuration
# File: grpc_services/proto/service.proto

syntax = "proto3";

package messenger;

// Сервис аутентификации
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

// Сервис чатов
service ChatService {
  rpc CreateChat (CreateChatRequest) returns (CreateChatResponse);
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc GetChatHistory (GetChatHistoryRequest) returns (GetChatHistoryResponse);
  rpc GetUserChats (GetUserChatsRequest) returns (GetUserChatsResponse);
  rpc CreatePoll (CreatePollRequest) returns (CreatePollResponse);
  rpc VotePoll (VotePollRequest) returns (VotePollResponse);
}

// Сервис файлов
service FileService {
  rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
  rpc GetFileInfo (GetFileInfoRequest) returns (GetFileInfoResponse);
  rpc ProcessImage (ProcessImageRequest) returns (ProcessImageResponse);
  rpc CreateStreamingUrl (CreateStreamingUrlRequest) returns (CreateStreamingUrlResponse);
}

// Сервис уведомлений
service NotificationService {
  rpc SendPushNotification (SendPushNotificationRequest) returns (SendPushNotificationResponse);
  rpc ScheduleNotification (ScheduleNotificationRequest) returns (ScheduleNotificationResponse);
  rpc SendEmailNotification (SendEmailNotificationRequest) returns (SendEmailNotificationResponse);
  rpc GetUserNotifications (GetUserNotificationsRequest) returns (GetUserNotificationsResponse);
  rpc MarkAsRead (MarkAsReadRequest) returns (MarkAsReadResponse);
}

// Сообщения для аутентификации
message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  bool success = 1;
  string user_id = 2;
  string message = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string tfa_code = 3;
}

message LoginResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  string user_id = 4;
  string message = 5;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string message = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string token_type = 3;
}

// Сообщения для чатов
message CreateChatRequest {
  string type = 1; // "private" или "group"
  repeated int32 participants = 2;
  string name = 3; // для группового чата
  int32 creator_id = 4;
}

message CreateChatResponse {
  bool success = 1;
  string chat_id = 2;
  string message = 3;
}

message SendMessageRequest {
  string chat_id = 1;
  int32 sender_id = 2;
  string content = 3;
  string message_type = 4; // "text", "image", "file", "poll", etc.
}

message SendMessageResponse {
  bool success = 1;
  string message_id = 2;
  string timestamp = 3;
}

message GetChatHistoryRequest {
  string chat_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetChatHistoryResponse {
  repeated Message messages = 1;
}

message Message {
  string id = 1;
  int32 sender_id = 2;
  string sender_username = 3;
  string content = 4;
  string message_type = 5;
  string timestamp = 6;
}

message GetUserChatsRequest {
  int32 user_id = 1;
}

message GetUserChatsResponse {
  repeated Chat chats = 1;
}

message Chat {
  string id = 1;
  string type = 2; // "private" или "group"
  string name = 3;
  int32 creator_id = 4;
  repeated int32 participants = 5;
  string last_message = 6;
  string last_activity = 7;
  int32 unread_count = 8;
}

message CreatePollRequest {
  string chat_id = 1;
  string question = 2;
  repeated string options = 3;
  int32 creator_id = 4;
}

message CreatePollResponse {
  bool success = 1;
  string poll_id = 2;
}

message VotePollRequest {
  string poll_id = 1;
  string option_index = 2;
  int32 voter_id = 3;
}

message VotePollResponse {
  bool success = 1;
  string message = 2;
}

// Сообщения для файлов
message UploadFileRequest {
  bytes file_data = 1;
  string filename = 2;
  int32 uploader_id = 3;
  string chat_id = 4;
}

message UploadFileResponse {
  bool success = 1;
  string file_id = 2;
  string stored_name = 3;
  string download_url = 4;
}

message DownloadFileRequest {
  string stored_name = 1;
}

message DownloadFileResponse {
  bytes file_data = 1;
  string filename = 2;
  string mime_type = 3;
}

message GetFileInfoRequest {
  string file_id = 1;
}

message GetFileInfoResponse {
  bool success = 1;
  FileInfo file_info = 2;
}

message FileInfo {
  string id = 1;
  string filename = 2;
  string stored_name = 3;
  int32 uploader_id = 4;
  int64 size = 5;
  string mime_type = 6;
  string uploaded_at = 7;
  string chat_id = 8;
}

message ProcessImageRequest {
  string stored_name = 1;
  int32 width = 2;
  int32 height = 3;
}

message ProcessImageResponse {
  bool success = 1;
  string processed_file_name = 2;
}

message CreateStreamingUrlRequest {
  string stored_name = 1;
  int32 duration = 2; // в секундах
}

message CreateStreamingUrlResponse {
  bool success = 1;
  string streaming_url = 2;
}

// Сообщения для уведомлений
message SendPushNotificationRequest {
  int32 user_id = 1;
  string title = 2;
  string body = 3;
  string type = 4; // "info", "warning", "error", "success"
  map<string, string> data = 5;
}

message SendPushNotificationResponse {
  bool success = 1;
  string message = 2;
}

message ScheduleNotificationRequest {
  int32 user_id = 1;
  string title = 2;
  string body = 3;
  string type = 4;
  map<string, string> data = 5;
  string scheduled_time = 6;
}

message ScheduleNotificationResponse {
  bool success = 1;
  string notification_id = 2;
}

message SendEmailNotificationRequest {
  int32 user_id = 1;
  string subject = 2;
  string body = 3;
}

message SendEmailNotificationResponse {
  bool success = 1;
  string message = 2;
}

message GetUserNotificationsRequest {
  int32 user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  bool unread_only = 4;
}

message GetUserNotificationsResponse {
  repeated Notification notifications = 1;
}

message Notification {
  string id = 1;
  string title = 2;
  string body = 3;
  string type = 4;
  map<string, string> data = 5;
  bool sent = 6;
  string created_at = 7;
  string read_at = 8;
}

message MarkAsReadRequest {
  string notification_id = 1;
  int32 user_id = 2;
}

message MarkAsReadResponse {
  bool success = 1;
  string message = 2;
}